--- a/src/styles/TestCase.css
+++ b/src/styles/TestCase.css
@@ -1,8 +1,28 @@
-.cardboard-style{
+.cardboard-style {
     padding: 20px;
     border-radius: 8px;
     background: white;
-    box-shadow: '0 4px 8px rgba(0, 0, 0, 0.1)';
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-left: 10px;
     margin-right: 10px;
-}
+    margin-top: 10px;
+  }
+  
+  .cardboard-style.container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .input-container {
+    flex: 1 1 30%;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .span-label {
+    color: gray;
+    margin-bottom: 5px;
+  }
+  
