--- a/src/styles/TestCase.css
+++ b/src/styles/TestCase.css
@@ -20,9 +20,25 @@
     display: flex;
     flex-direction: column;
   }
+
+  .text-field-container {
+    flex: 1 1 100%;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+  }
+
   
   .span-label {
     color: gray;
     margin-bottom: 5px;
+  }
+  
+  .text-field {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    margin-top: 5px;
   }
   
