--- a/src/styles/TestCase.css
+++ b/src/styles/TestCase.css
@@ -42,3 +42,46 @@
     margin-top: 5px;
   }
   
+  .button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .button-container button {
+    width: 125px;
+    height: 50px;
+    margin: 0 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+  }
+  
+  .voltar-button {
+    background-color: white;
+    color: #1082BE;
+    border: 2px solid #1082BE;
+  }
+  
+  .cadastrar-button {
+    background-color: #1082BE;
+    color: white;
+  }
+  
+  .voltar-button:hover {
+    background-color: #f0f0f0;
+  }
+  
+  .cadastrar-button:hover {
+    background-color: #2d9bd7;
+  }
+  .cadastrar-button:disabled{
+    background-color: rgb(182, 182, 182);
+    pointer-events: none;
+  }
+  
