--- a/src/styles/TestCase.css
+++ b/src/styles/TestCase.css
@@ -89,3 +89,11 @@
   .text-style h2 {
     margin-left: 10px !important;
   }
+
+  .column-selection{
+    margin-top: 20px;
+  }
+
+  .column-selection button{
+    background-color: #1082BE;
+  }
