--- a/src/styles/AddModal.css
+++ b/src/styles/AddModal.css
@@ -10,6 +10,8 @@
   flex-direction: column;
   align-items: center;
   min-width: 950px;
+  overflow-y: auto;
+  max-height: 80vh;
 }
 
 .team-modal-input {
