--- a/src/styles/AddButton.css
+++ b/src/styles/AddButton.css
@@ -2,11 +2,11 @@
 .add-team-button {
     width: 100% !important;
     padding: 30px !important;
-    background-color: #f0f0f0 !important; ; /* Cinza claro */
-    display: flex !important;; /* Utiliza flexbox para alinhar conteúdo */
-    justify-content: flex-start !important;; /* Alinha o conteúdo à esquerda */
-    align-items: center !important;; /* Centraliza verticalmente o ícone e o texto */
-    color: #000 !important; /* Preto */
+    background-color: #f0f0f0 !important; ; 
+    display: flex !important;; 
+    justify-content: flex-start !important;; 
+    align-items: center !important;
+    color: #000 !important;
   }
   
   .add-team-button .MuiSvgIcon-root {
@@ -18,5 +18,5 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    text-decoration: none; /* Remove o sublinhado padrão do link */
+    text-decoration: none; 
   }
