--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,5 @@
-/* navbar.css */
 .navbar {
     background-color: #5cbc4c;
-    padding: 10px;
     color: #fff;
     padding: 20px;
   }
@@ -18,7 +16,7 @@
   }
   
   .navbar ul li:last-child {
-    margin-right: 0; /* Remove a margem direita do último item */
+    margin-right: 0;
   }
   
   .navbar ul li a {
