--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,9 +1,3 @@
-.chartCanvas {
- 
-}
-/* Adicione aqui estilos adicionais conforme necessário */
-
-
 .metric.cardboard-style {
   padding: 20px;
   border-radius: 8px;
@@ -13,23 +7,20 @@
   width: calc(100% - 40px);
   max-width: 100%; 
 
-  /* Alinhamento ao centro */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  /* Adicione outros estilos necessários */
 }
 
 .metric.cardboard-style > div {
-  margin-bottom: 20px; /* Adiciona espaço entre as seções */
+  margin-bottom: 20px; 
 }
 
-/* Estilos para o gráfico */
 .metric-chart.chartCanvas {
   width: 300px;
-  margin-bottom: 20px; /* Adiciona espaço entre o gráfico e a tabela */
+  margin-bottom: 20px; 
   display: flex;
   justify-content: center;
   align-items: center;
