--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,26 +1,34 @@
 .navbar {
-    background-color: #5cbc4c;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  .navbar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .navbar ul li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  .navbar ul li:last-child {
-    margin-right: 0;
-  }
-  
-  .navbar ul li a {
-    text-decoration: none;
-    color: #fff;
-  }
-  
+  background-color: #4ea73f;
+  color: #fff;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+
+
+
+/* Restante dos estilos conforme necessário */
+.navbar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar ul li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.navbar ul li:last-child {
+  margin-right: 0;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
