--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -38,5 +38,25 @@
   
   button {
     margin-top: 10px;
+    min-width: 150px !important;
+    min-height: 50px !important;
+
+  }
+
+  .button-login {
+    background-color: #1082BE !important;
+    color: white !important;
+  }
+ 
+  
+  .button-login:hover {
+    background-color: #2d9bd7 !important;
+  }
+  .button-login:disabled{
+    background-color: rgb(182, 182, 182) !important;
+    pointer-events: none !important;
   }
   
+  .error-message{
+    color: red;
+  }
