--- a/src/styles/SearchBarTeams.css
+++ b/src/styles/SearchBarTeams.css
@@ -5,16 +5,18 @@
 }
 
 .search-field {
-  width: 90%;
+  width: 85%;
   height: 50px;
-  margin-right: 10px;
+  margin-right: 10px !important;
+  margin-left: 10px !important;
 }
 
 .search-button {
   width: 10%;
   height: 50px;
   background-color: #1082BE !important;
-  margin-left: 1% !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
 }
 
 .dropdown-container {
@@ -31,6 +33,7 @@
   flex-basis: calc(33.33% - 10px); 
   box-sizing: border-box; 
   background-color: transparent;
+  margin-left: 10px !important;
 }
 
 .dropdown select {
