--- a/src/styles/AddModal.css
+++ b/src/styles/AddModal.css
@@ -14,9 +14,9 @@
 }
 
 .team-modal-input {
-  width: calc(100% - 40px);
+  width: calc(100% - 40px) !important;
   margin-bottom: 20px;
-  margin: 10px !important;
+ margin-top: 10px !important;
 }
 
 .team-modal-button {
@@ -45,6 +45,7 @@
   -moz-appearance: none;
   background-image: none;
   height: 59px;
+  margin-top: 10px !important;
 }
 
 .select-dropdown:focus {
