--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,11 +1,11 @@
-.cardboard-style {
+.cardboard-style-login {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 20px; /* Aumentei o padding para dar mais espaço */
+    padding: 20px;
     width: 50%; 
     max-width: 500px; 
     margin: auto;
@@ -19,14 +19,14 @@
     margin-bottom: 20px;
   }
   
-  .form-container {
+  .form-container-login {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%; 
   }
   
-  .form-group {
+  .form-group-login {
     margin-bottom: 20px; 
     width: 100%; 
   }
