--- a/src/styles/ChangePassword.css
+++ b/src/styles/ChangePassword.css
@@ -5,7 +5,8 @@
     justify-content: center;
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 20px; /* Aumentei o padding para dar mais espaço */
+    padding: 20px;
+    background-color: #fff;
     width: 50%; 
     max-width: 500px; 
     margin: auto;
